# rust-open-weather

./: Cargo.toml  README.md
src/: example.json  json.rs  main.rs
