[package]
name = "rust-openweather"
version = "0.1.0"
authors = ["alice <alice@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
serde_json = "1.0.64"

[dependencies.reqwest]
version = "0.11.3"
features = ["blocking"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
